--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
+    /**
+     * logstash-logback config
+     */
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.1.1'
+
 
     compileOnly 'org.projectlombok:lombok'
 
