인증 필터 허용 예외Url 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   h2:
     console:
       enabled: true
-      path: /test-console
+      path: /test-db-console
       settings:
         web-allow-others: true
 
