--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,4 +38,4 @@ jwt:
 logging:
   level:
     org.hibernate.sql: DEBUG
-#  config: classpath:log/logback-dev-config.xml
+  config: classpath:log/logback-dev-config.xml
